# repeaterwatch

./: .gitattributes  .gitignore  README.md  config.example.toml  pyproject.toml
app/: __init__.py  ai_provider.py  cli.py  config.py  db.py  main.py  models.py  provider_errors.py  retention.py
app/api/: activity_chat.py  callsigns.py  dependencies.py  live.py  notifications.py  recordings.py  repeaters.py  summaries.py  system.py
app/audio/: live.py  segmenter.py
app/notify/: webpush.py
app/sdr/: __init__.py  manager.py  multi_iq.py  passband.py  rtl_fm.py
app/static/: app.js  index.html  manifest.json  styles.css  sw.js
app/summarize/: __init__.py  chat.py  llm.py
app/transcribe/: whisper.py
deploy/: Caddyfile.example  repeaterwatch.service
tests/: test_activity.py  test_activity_chat.py  test_api_usage.py  test_callsigns.py  test_cli.py  test_config.py  test_delete_clear.py  test_keywords.py  test_live_audio.py  test_multi_iq.py  test_passband.py  test_receiver_health.py  test_repeaters_api.py  test_retention.py  test_segmenter.py  test_static_ui.py  test_summaries.py  test_transcription.py
