[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repeaterwatch"
version = "0.1.0"
description = "Local-first RTL-SDR analog FM repeater monitor for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "tomli-w>=1.0",
  "httpx>=0.27",
  "numpy>=2.0",
  "pywebpush>=2.0",
  "cryptography>=42",
]

[project.optional-dependencies]
transcribe = ["faster-whisper>=1.0"]
dev = ["pytest>=8.0"]

[project.scripts]
repeaterwatch = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
